<resources>
    <string name="app_name">일그램</string>

    <string name="home">홈</string>
    <string name="address_book">주소록</string>
    <string name="monitoring_diary">활동일지</string>
    <string name="map">지도</string>
    <string name="monitoring_calendar">monitoring_calendar</string>
    <string name="edit">편집</string>
    <string name="visit_place">방문장소</string>
    <string name="visit_purpose">방문목적</string>
    <string name="state">방문상태</string>
    <string name="remark">특이사항</string>
    <string name="motoring_image">motoring image</string>
    <string name="add">추가</string>
    <string name="back_button">back button</string>
    <string name="group_icon">group icon</string>
    <string name="contact_image">contact image</string>
    <string name="write">작성</string>
    <string name="select_place">방문장소를 선택해 주세요</string>
    <string name="input_image"><font size="20">사진을 넣어주세요</font></string>
    <string name="input_place">방문장소를 입력해 주세요</string>
    <string name="input_purpose"><font size="20">기타 방문목적을 입력해 주세요</font></string>
    <string name="complete">완료</string>
    <string name="missed">부재</string>
    <string name="outing">외출</string>
    <string name="edit_remark">특이사항을 입력해 주세요</string>
    <string name="input_remark"><font size="20">특이사항을 입력해 주세요</font></string>
    <string name="group_add">group add</string>
    <string name="group_setting">group setting</string>
    <string name="call_button">call button</string>
    <string name="message_button">message button</string>
    <string name="cancel">취소</string>
    <string name="apply">적용</string>
    <string name="range">구간설정</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="new_message">새로운 메세지</string>
    <string name="message">문자 메세지</string>
    <string name="button_message_send">button_message_send</string>
    <string name="button_message_camera">button_message_camera</string>
    <string name="notice">광교종합사회복지관 공지사항</string>
    <string name="notice_image">notice image</string>
    <string name="setting">적용</string>
    <string name="reset">reset</string>
    <string name="contact_detail">연락처 상세</string>
    <string name="input_name">이름을 입력해주세요</string>
    <string name="phone">전화번호</string>
    <string name="input_phone_number">전화번호를 입력하세요</string>
    <string name="more_monitoring">활동일지 더보기 ∨</string>
    <string name="star">star</string>
    <string name="contact_emergency">비상연락처</string>
    <string name="address">주소</string>
    <string name="input_address">주소를 입력하세요</string>
    <string name="save">저장</string>
    <string name="no_monitoring">최근 활동일지 없음</string>
    <string name="register">등록</string>
    <string name="writing">글쓰기</string>
    <string name="title">제목</string>
    <string name="body">내용</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="remove_image_button">remove image button</string>
    <string name="comment">댓글</string>
    <string name="write_comment">댓글 달기…</string>
    <string name="post">게시</string>
    <string name="today_menu">이번 달 도시락</string>
    <string name="remove_contact">연락처 삭제</string>
    <string name="more">더보기</string>
    <string name="no_result">결과 없음</string>
    <string name="export_csv">export csv</string>
    <string name="input_email">이메일을 입력해 주세요</string>
    <string name="send">전송</string>
    <string name="lunch_box">도시락</string>
    <string name="consulting">상담</string>
    <string name="other">기타</string>
    <string name="social_worker">사회복지사</string>
    <string name="volunteer">자원봉사자</string>
    <string name="input_writer"><font size="20">작성자를 입력해 주세요</font></string>
    <string name="delete">delete</string>
    <string name="remove">삭제</string>
    <string name="confirm">확인</string>
    <string name="triangle">triangle</string>
    <string name="select_all">전체선택</string>
    <string name="message_send"> 보내기</string>
    <string name="message_group">추가하기</string>
    <string name="message_to">문자를 보낼까요?</string>
    <string name="to">에게</string>


    <string-array name="notice_group">
        <item>"공지사항"</item>
        <item>"도시락"</item>
        <item>"게시판 선택"</item>
    </string-array>


</resources>
