<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" android:focusable="true">

    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/star_selector_yellow" android:id="@+id/star"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view" android:layout_marginTop="8dp"
            android:contentDescription="@string/star"/>
    <ImageView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back"
            android:id="@+id/backButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="2dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_button" app:layout_constraintBottom_toBottomOf="@+id/view"
            android:layout_marginBottom="8dp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/save"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="18dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/view"
            android:layout_marginTop="8dp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/view"
            android:background="#d8d8d8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="3dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="46dp"/>

    <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageView"
            app:cardCornerRadius="45dp"
            android:layout_centerHorizontal="true"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.0" app:cardElevation="0dp">
        <ImageView
                android:layout_height="90dp"
                android:layout_width="match_parent"
                android:id="@+id/image"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" app:srcCompat="@drawable/ic_contact"
                android:contentDescription="@string/contact_image">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <EditText
            tools:ignore="AutoFill"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:background="@android:color/transparent"
            tools:text="김한다 어르신"
            android:hint="@string/input_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameText"
            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginTop="14dp"
            android:inputType="textPersonName"/>

    <EditText
            tools:ignore="AutoFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textSize="13sp"
            android:textColor="@color/colorAccent"
            android:hint="@string/edit_remark"
            tools:text="매주 화요일 방문하여 도시락배달. \n혼자 지내고 계신다."
            android:inputType="textMultiLine"
            android:id="@+id/remarkText" app:layout_constraintTop_toBottomOf="@+id/nameText"
            android:layout_marginTop="6dp" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="16dp"/>

    <TextView
            android:text="@string/phone"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/phoneTextView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" android:layout_marginTop="24dp"/>

    <EditText
            tools:ignore="AutoFill"
            android:textColor="#4a4a4a"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@drawable/border"
            android:hint="@string/input_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            tools:text="010-1234-5678"
            android:ems="10"
            android:id="@+id/phoneEditText" app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="6dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"/>
    <TextView
            android:text="@string/contact_emergency"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/emergencyTextView"
            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" android:layout_marginTop="16dp"/>
    <EditText
            tools:ignore="AutoFill"
            android:textColor="#4a4a4a"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@drawable/border"
            android:hint="@string/input_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            tools:text="010-1234-5678"
            android:ems="10"
            android:id="@+id/emergencyEditText" app:layout_constraintTop_toBottomOf="@+id/emergencyTextView"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="6dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"/>
    <TextView
            android:text="@string/address"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addressTextView"
            app:layout_constraintTop_toBottomOf="@+id/emergencyEditText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" android:layout_marginTop="16dp"/>
    <EditText
            tools:ignore="AutoFill"
            android:textColor="#4a4a4a"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@drawable/border"
            android:hint="@string/input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:text="수원시 영통구 이의동 에듀하임 102동"
            android:ems="10"
            android:id="@+id/addressEditText" app:layout_constraintTop_toBottomOf="@+id/addressTextView"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="6dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/saveButton"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>