<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:clickable="true" android:focusable="true">

    <TextView
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#4a4a4a"
            android:id="@+id/cancelButton" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/writeText"
            app:layout_constraintBottom_toBottomOf="@+id/writeText"/>

    <TextView
            android:text="@string/writing"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/writeText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/view"
            android:layout_marginBottom="5dp" android:layout_marginTop="6dp"/>
    <TextView
            android:text="@string/register"
            android:textSize="18sp"
            android:textColor="#4a4a4a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/writeButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="@+id/writeText"
            app:layout_constraintBottom_toBottomOf="@+id/writeText"/>
    <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:id="@+id/view"
            android:background="#d8d8d8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/view" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/view4" android:layout_marginStart="2dp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:id="@+id/view4"
            android:background="#d8d8d8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="98dp"/>

    <EditText
            tools:ignore="AutoFill"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="text"
            android:hint="@string/title"
            android:background="@android:color/transparent"
            android:ems="10"
            android:id="@+id/titleEditText" app:layout_constraintTop_toBottomOf="@+id/view4" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/view5"/>
    <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:id="@+id/view5"
            android:background="#eeeeee"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="150dp"/>

    <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/albumButton"
            android:layout_marginBottom="12dp" android:id="@+id/nestedScrollView">

        <EditText
                android:minHeight="50dp"
                tools:ignore="AutoFill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:hint="@string/body"
                android:background="@android:color/transparent"
                android:ems="10"
                android:id="@+id/bodyEditText"
        />

    </androidx.core.widget.NestedScrollView>


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_gallery" android:id="@+id/albumButton"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="14dp"
            android:contentDescription="@string/gallery"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_camera" android:id="@+id/cameraButton"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/albumButton" android:layout_marginStart="15dp"
            android:contentDescription="@string/camera"/>
    <ProgressBar
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>