<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_close" android:id="@+id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/cancel"
            android:layout_marginEnd="6dp"/>
    <TextView
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constrainedWidth="true"
            android:maxEms="7"
            android:textSize="20sp"
            tools:text="00"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:paddingStart="28dp"
            android:paddingEnd="0dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/userText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/cancelButton"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/to"/>
    <TextView
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constrainedWidth="true"
            android:text="@string/to"
            android:textSize="20sp"
            android:paddingStart="0dp"
            android:paddingEnd="28dp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/to"
            app:layout_constraintStart_toEndOf="@+id/userText"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@+id/userText" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:textSize="20sp"
            android:text="@string/message_to"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/messageText"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/userText"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textAlignment="center"
            android:text="@string/message_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/sendButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view"
            android:layout_marginTop="13dp" app:layout_constraintTop_toBottomOf="@+id/view7"
            android:layout_marginBottom="13dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:text="@string/message_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/groupButton" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="13dp" app:layout_constraintTop_toTopOf="@+id/view"
            android:layout_marginBottom="13dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <View
            android:layout_width="match_parent"
            android:background="#cecece"
            android:layout_height="1dp" android:id="@+id/view7" app:layout_constraintTop_toBottomOf="@+id/messageText"
            android:layout_marginTop="26dp"/>
    <View
            android:background="#cecece"
            android:layout_width="1dp"
            android:layout_height="0dp" android:id="@+id/view"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view7"/>
</androidx.constraintlayout.widget.ConstraintLayout>